Moves to public folder to clean root folder

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <html>
   <link rel="stylesheet" href="./index.css" />
   <div id="root"></div>
-  <script src="./dist/bundle.js"></script>
+  <script src="../dist/bundle.js"></script>
 </html>
